--- a/src/ExtraPages/PMSAIF/PMSAIF.scss
+++ b/src/ExtraPages/PMSAIF/PMSAIF.scss
@@ -21,7 +21,7 @@ $darkBlue : #17233d;
 }
 
 //flex-rows
-.featureCard, .RegItem, .firstRow, .thirdRow, .regCard{
+.featureCard, .RegItem, .firstRow, .thirdRow{
   display : flex;
   flex-direction : row;
   justify-content : flex-start;
@@ -59,6 +59,17 @@ $darkBlue : #17233d;
 #PMSAIFMC{
   display : grid;
   place-items : center;
+  
+  .regCardP{
+    display : flex;
+    flex-direction : row;
+    gap : 10px;
+    
+    h3{
+      display : flex;
+      flex-direction : column;
+    }
+  }
   
   .PMSone{
     img{
